Added basic JS form function

--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Order Logger</title>
+    <link
+      rel="stylesheet"
+      href="style.css
+    "
+    />
   </head>
   <body>
     <div class="container">
       <div id="clientGrid"></div>
       <div id="productGrid"></div>
+      <input type="date" id="Date" />
+      <input type="number" name="IN" id="IN" placeholder="IN" />
+      <input type="number" name="OUT" id="OUT" placeholder="OUT" />
+      <button id="submit">Submit</button>
     </div>
 
     <script src="Script.js"></script>
